--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.google.android.gms:play-services-places:11.6.0'
+    implementation 'com.google.android.gms:play-services-places:11.6.0'
     implementation files('libs/transaction-api-1.1.jar')
     implementation files('libs/commons-logging-1.1.1.jar')
     implementation files('libs/google-api-client-1.23.0.jar')
